<resources>
    <string name="app_name">EwuHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sort_course_description">Please, Enter the total number of subjects you want to conflict free for advising.</string>
    <string name="title_activity_sort_course_home">Advising Helper</string>
    <string name="title_activity_course_input">Sort Courses</string>
    <string name="course_input_description">Please, Input name of the subjects you want to conflict free.</string>
    <string name="title_activity_show_sort_courses">Conflict Free Combination</string>
    <string name="title_activity_course_details">Subject Details</string>
    <string name="ewu_history">The idea of establishing a private university
        to provide quality education at an affordable cost in Bangladesh was
        first mooted by a group of prominent academics, business leaders, professionals
        and education enthusiasts led by Dr. Mohammed Farashuddin. With this end in view,
        this group formed a non-profit, non-political, charitable organization called Progoti
        Foundation for Education and Development (PFED). East West University is its first major
        project. Members of the Board of Directors of the University are: Mr. Jalaluddin Ahmed,
        Mr. S.M. Nousher Ali, Mr. Farooque B. Chaudhury, Dr. Rafiqul Huda Chaudhury,
        Mr. Syed Manzur Elahi, Dr. Mohammed Farashuddin, Mr. Mohammed Zahidul Haque R.Ph.,
        Dr. Saidur Rahman Lasker, Dr. Muhammad A. Mannan, Professor M. Mosleh-Uddin, Mr. Shelley
        A. Mubdi, Mr. M.A. Mumin, Dr. Khalil Rahman, Mr. H.N. Ashequr Rahman and Mrs. Razia
        Samad. After being accorded permission by the Government under the Private University
        Act (Act 34) of 1992, East West University was launched in 1996. Classes started in
        September 1996 with 6 faculty members and 20 students in the campus located at 43
        Mohakhali C/A, Dhaka-1212. Today there are over 281 faculty members and approximately
        8000 students enrolled through a process of selection.</string>
    <string name="ewu_mission_statement">In keeping with its name, East West University, rated
        among the top private universities of Bangladesh, is an institution that promotes
        eastern culture and values, and meaningfully blends eastern and western thought and
        innovation. As an institution of higher learning that promotes and inculcates ethical
        standards, values and norms, East West University (EWU) is committed to the ideals of
        equal opportunity, transparency, and non-discrimination. The primary mission of EWU is
        to provide, at a reasonable cost, tertiary education characterized by academic
        excellence in a range of subjects that are particularly relevant to current and
        anticipated societal needs. Central to the university’s mission is its intention to
        provide students with opportunities, resources and expertise to achieve academic,
        personal and career goals within a stimulating and supportive environment. EWU is
        striving not only to maintain high quality in both instruction and research, it is
        also rendering community service through dissemination of information, organization
        of training programs and other activities. Sensitive to the needs of its students and
        staff, EWU is committed to providing a humane, responsive and invigorating atmosphere
        for productive learning and innovative thinking.</string>
    <string name="title_activity_ewu_spirit">Ewu Spirit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_academic_calendar">Academic Calendar</string>
    <string name="title_activity_notice">Notice Board</string>
    <string name="title_activity_notice_web_viewer">Notice Viewer</string>
    <string name="title_activity_course_details_activty">Course Detail</string>
    <string name="title_activity_details">Course Details</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="advising_helper">Advising Helper</string>
    <string name="result">Result</string>
    <string name="academic_calender">Academic Calender</string>
    <string name="notice_board">Notice Board</string>
    <string name="ewuspirit">EwuSpirit</string>
    <string name="secondary_group_app_home">Settings and Communication</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="faculy_evaluation">Faculy Evaluation</string>
    <string name="class_schedule_routine">Class Schedule/Routine</string>
    <string name="check_available_seat">Check Available Seat</string>
    <string name="credit_info">Credit Info</string>
    <string name="check_advisior">Check Advisior</string>
    <string name="advising_time_schedule">Advising Time Schedule</string>
    <string name="additional_info">Additional Info</string>
    <string name="ewu_spirit_homepage">Ewu Spirit HomePage</string>
    <string name="advising_list">Advising List</string>
    <string name="ewu_library">Ewu Library</string>
    <string name="tree_bricks_logo">Tree Bricks Developer logo</string>
    <string name="feedback_summary">Send us your feedback about this application if you have any suggestion and if you face any problem. Feel free to feedback us. Your opinion will help us to make this application better</string>
    <string name="update_summary">Update course database &amp; advising list. This update needs at the beginning of the Advising and after application update.</string>
    <string name="slide1des">Slide from left to right of your mobile screen to see the EwuHub\'s features.</string>
    <string name="slide1">Where is the EwuHub features?</string>
    <string name="slide2">EwuHub Features</string>
    <string name="slide2des">Select features from Drawer. Be patience and give EwuHub sometime to load the feature.</string>
    <string name="slide3">Advising Helper</string>
    <string name="slide3des">Advising Helper will help you to find the combination of sections of the courses without any conflict between section.</string>
    <string name="slide4">Input the Subjects for Advising Helper</string>
    <string name="slide4des">For finding conflict free combination of sections input the course names properly.</string>
    <string name="slide5">EwuSpirit now on Pocket</string>
    <string name="slide5des">Use most useful EwuSpirit features from EwuHub. Get rid of memorizing EwuSpirit IP address.</string>
    <string name="sort_section_dialog_text">"Enter the section of "</string>
    <string name="update_academic_calendar">Update the Academic Calendar. This is needed for beginning of the semister.</string>
    <string name="update_advising_list">Update the advising list for advising.</string>
    <string name="course_input_hint">Name of Subject-1(Ex:CSE107)</string>
    <string name="mainpage_of_ewuhub">MainPage of EwuHub</string>
    <string name="history">History</string>
    <string name="mission_statement">Mission Statement</string>
    <string name="bullet_symbol">\u2022</string>
    <string name="ewuspirit_li_1">
        Without connecting to the ewuwifi you can not access any of the services.
        This means you can only access to this service if you are on East West University.
    </string>
    <string name="ewuspirit_li_2">
        Swipe right from the left edge of your mobile screen to see the options.
    </string>
    <string name="ewuspirit_li_3">
        Not every feature of Ewu Spirit work, but the options given here is still functional.
    </string>
    <string name="ewusprit_instruction_head">Instructions To Use Ewu Spirit on Mobile</string>
    <string name="ewusprit_faculty_head">Faculty Evaluation</string>
    <string name="ewusprit_faculty_description">Here you can evaluate your instructors of every course you have taken.
        It\'s very helpful because most of the time ICS Lab PC is busy when you need this.</string>
    <string name="ewusprit_routine_head">Class Schedule / Routine</string>
    <string name="ewusprit_routine_description">You can check when will be your class, what is the room number etc.</string>
    <string name="ewusprit_seat_head">Available Seat</string>
    <string name="ewusprit_seat_description">You can check if there any available seat of a particular section you want to take.
         This feature will be very helpful in advising day and for add droping course.</string>
    <string name="ewusprit_credit_head">Credit Information</string>
    <string name="ewusprit_credit_description">
        You can check how many credit you completed.
        What is your current cgpa etc. This feature will not show the detail result.</string>
    <string name="ewusprit_advisior_head">Who is your Advisior?</string>
    <string name="ewusprit_advisior_description">
        You can check which faculty is your current advisior. Your advisior is your guardian in the university.</string>
    <string name="ewusprit_advising_sch_head">Advising Schedule</string>
    <string name="ewusprit_advising_sch_description">
        Here you can see which time you can advising on advising day. Remember this time is very important,
        you should not late to go your advisior on advising day.</string>
    <string name="ewusprit_advising_list_head">Advising Sheet</string>
    <string name="ewusprit_advising_list_description">
        Advising Sheet will help you to see all the courses and its section, class start and end time,
        lab time, room number of the class</string>
    <string name="ewuspirit_disclaimer_head">Disclaimer</string>
    <string name="ewuspirit_disclaimer_des">
        All the functionality of the ewuspirit is from original ewuspirit website.
        If original ewuspirit functionality changes then ewuspirit functionality on this App will also change.
        treebricks will not take any kind of responsibility of the use of ewuspirit.</string>
    <string name="treebricks_description">treebricks is an application studio build by EWU students. EwuHub is treebricks first application.
        We worked a long time to bring this application before you.
        treebricks hope users will love this application.\t\ntreebricks</string>
    <string name="privacy_policy">
        EwuHub does not obtain any kind of personal information from your device and also when you use this application.
        The only information we get about you(Device Model, Android Version) is from google, when you downloaded this app from Google Play Store.
        To know how google collect your information goto Play Store Privacy Policy to know details about Google Play Store Privacy Policy.
        EwuSpirit server(On East West University) has some certain feature which allow anyone to get anyone\'s information like credit information, result, class routine etc.
        EwuHub and treebricks is not responsible for such kind information because
        EwuHub\'s information is based on East West University website and its server.
        User are responsible what they are doing with this Application.</string>
</resources>