<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_faculty_evaluation"
            android:icon="@drawable/ic_evaluation"
            android:title="@string/faculy_evaluation" />
        <item
            android:id="@+id/nav_class_schedule"
            android:icon="@drawable/ic_class_schedule"
            android:title="@string/class_schedule_routine" />
        <item
            android:id="@+id/nav_available_seat"
            android:icon="@drawable/ic_available_seat"
            android:title="@string/check_available_seat" />
        <item
            android:id="@+id/nav_credit_info"
            android:icon="@drawable/ic_credit_info"
            android:title="@string/credit_info" />
        <item
            android:id="@+id/nav_advisior"
            android:icon="@drawable/ic_advisor"
            android:title="@string/check_advisior" />
        <item
            android:id="@+id/nav_advising_schedule"
            android:icon="@drawable/ic_advising_time"
            android:title="@string/advising_time_schedule" />
        <item
            android:id="@+id/advising_sheet"
            android:icon="@drawable/ic_advising_sheet"
            android:title="@string/advising_list"
            />
    </group>
    <item android:title="@string/additional_info">
        <menu>
            <item
                android:title="@string/ewu_spirit_homepage"
                android:id="@+id/nav_ewu_sprit_homepage"
                android:icon="@drawable/ic_ewu_sprit"
            />
        </menu>
    </item>

</menu>
