<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.treebricks.ewuhub.ui.Preferences">

    <ListPreference
        android:icon="@drawable/list"
        android:title="Default Calendar"
        android:summary="Please select the default calendar for calendar card in Application Home"
        android:entries="@array/level_array"
        android:entryValues="@array/level_array_values"
        android:defaultValue="undergrad"
        android:dialogIcon="@drawable/list"
        android:key="level"/>

    <Preference
        android:icon="@drawable/ic_update_db"
        android:key="updatedb"
        android:summary="@string/update_summary"
        android:title="Update Course Database &amp; Advising List" />

    <Preference
        android:icon="@drawable/ic_update_calendar"
        android:key="updateac"
        android:summary="@string/update_academic_calendar"
        android:title="Update Academic Calender" />

    <Preference
        android:icon="@drawable/ic_feedback"
        android:key="feedback"
        android:summary="@string/feedback_summary"
        android:title="Feedback" />

    <Preference
        android:icon="@drawable/developer"
        android:key="developer"
        android:summary="Hey, Do you want to know more about EwuHub and treebricks?"
        android:title="About" />

</PreferenceScreen>
