<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/kbv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/application_home_image"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/instruction_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:focusable="true"
                card_view:cardBackgroundColor="@color/medium_aquamarine"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/instructiontitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp"
                        android:text="@string/history"
                        android:textColor="@color/light_blue"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/instructiontitle"
                        android:layout_gravity="center"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingEnd="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:paddingStart="10dp"
                        android:text="@string/ewu_history"
                        android:textSize="16sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:focusable="true"
                app:cardBackgroundColor="@color/medium_aquamarine"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/statementtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp"
                        android:text="@string/mission_statement"
                        android:textColor="@color/purple"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/statementtitle"
                        android:fontFamily="serif"
                        android:gravity="start"
                        android:paddingBottom="10dp"
                        android:paddingEnd="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:paddingStart="10dp"
                        android:text="@string/ewu_mission_statement"
                        android:textSize="16sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:onClick="aplicaiton_home_onclick_listener"
        android:src="@drawable/ic_web"
        app:fab_showShadow="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
